...


    <string name="onboarding_btn_skip">Skip</string>
    <string name="onboarding_btn_back">Back</string>
    <string name="onboarding_btn_next">Next</string>
    <string name="onboarding_btn_start">Get Started</string>
    <string name="onboarding_1st_description">Never lose track of your product warranties anymore.</string>
    <string name="onboarding_2nd_description">Keep track if a warranty is about to expire.</string>
    <string name="onboarding_3rd_description">Save money by using warranties before their expiry date.</string>
    <string name="onboarding_4th_description">All data are automatically backed up to the cloud.</string>


    <string name="auth_title_login">Login</string>
    <string name="auth_title_register">Register</string>
    <string name="auth_title_forgot_pw">Reset\nPassword</string>
    <string name="auth_title_forgot_pw_instruction">Reset\nPassword</string>
...
