...
        android:gravity="center_horizontal"
        android:lineHeight="@dimen/text_size_28sp"
        android:text="@string/onboarding_3rd_title"
        android:textAlignment="gravity"
        android:textColor="@color/skyBlueStatic"
        android:textSize="@dimen/text_size_24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_onboarding_3rd_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_header"
        tools:targetApi="p" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_onboarding_3rd_back"
        style="@style/Theme.WarrantyRoster.TextButton.OnBoarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_2dp"
        android:text="@string/onboarding_btn_back"
...
